test/corpus/message_shortcuts.txt
================================================================================
Text message shortcuts with required IDs
================================================================================

agent MessageAgent
  displayName: "Message Test Agent"
  flow SimpleFlow
    :start -> Greeting
    Greeting -> Farewell
  messages Messages
    text Greeting "Hello there!"
    text Farewell "Goodbye!"

--------------------------------------------------------------------------------

(source_file
  (agent_definition
    (identifier)
    (string)
    (flow_section
      (identifier)
      (flow_rule
        (flow_operand_or_expression
          (flow_operand
            (atom)))
        (flow_operand_or_expression
          (flow_operand
            (identifier))))
      (flow_rule
        (flow_operand_or_expression
          (flow_operand
            (identifier)))
        (flow_operand_or_expression
          (flow_operand
            (identifier)))))
    (messages_section
      (message_shortcut
        (text_shortcut
          (identifier)
          (embedded_value
            (simple_value
              (string)))))
      (message_shortcut
        (text_shortcut
          (identifier)
          (embedded_value
            (simple_value
              (string))))))))

================================================================================
Flow references to message IDs
================================================================================

agent FlowRefAgent
  displayName: "Flow Reference Test"
  flow ReferenceFlow
    :start -> WelcomeMsg
    WelcomeMsg -> ThankYouMsg
  messages Messages
    text WelcomeMsg "Welcome to our service!"
    text ThankYouMsg "Thank you for using our service!"

--------------------------------------------------------------------------------

(source_file
  (agent_definition
    (identifier)
    (string)
    (flow_section
      (identifier)
      (flow_rule
        (flow_operand_or_expression
          (flow_operand
            (atom)))
        (flow_operand_or_expression
          (flow_operand
            (identifier))))
      (flow_rule
        (flow_operand_or_expression
          (flow_operand
            (identifier)))
        (flow_operand_or_expression
          (flow_operand
            (identifier)))))
    (messages_section
      (message_shortcut
        (text_shortcut
          (identifier)
          (embedded_value
            (simple_value
              (string)))))
      (message_shortcut
        (text_shortcut
          (identifier)
          (embedded_value
            (simple_value
              (string))))))))